Fix alignment of uber menu dropouts and add arrows indicating hover state.

--- a/assets/screen.css
+++ b/assets/screen.css
@@ -262,21 +262,30 @@ h1 {
   padding-left: 10px;
   padding-right: 10px;
 }
-/* line 78, ../sass/_global/_base-layout-structure.sass */
+/* line 77, ../sass/_global/_base-layout-structure.sass */
 .main-navigation span {
-  display: block;
+  display: inline;
+  float: left;
 }
-/* line 80, ../sass/_global/_base-layout-structure.sass */
+/* line 79, ../sass/_global/_base-layout-structure.sass */
 .main-navigation .link {
   margin-bottom: 0.61538em;
+  background: transparent url("images/nav_arrow_o.png") no-repeat right 7px;
+  padding-right: 20px;
 }
-/* line 82, ../sass/_global/_base-layout-structure.sass */
+/* line 83, ../sass/_global/_base-layout-structure.sass */
 .main-navigation .description {
+  clear: left;
   font-size: 12px;
   color: black;
 }
 
-/* line 86, ../sass/_global/_base-layout-structure.sass */
+/* line 87, ../sass/_global/_base-layout-structure.sass */
+.active .link {
+  background: transparent url("images/nav_arrow_i.png") no-repeat right 7px;
+}
+
+/* line 90, ../sass/_global/_base-layout-structure.sass */
 .section {
   position: relative;
   min-height: 740px;
@@ -319,42 +328,45 @@ h1 {
   display: none;
   padding-top: 1.23077em;
   padding-bottom: 1.23077em;
-  text-align: center;
   color: white;
 }
-/* line 29, ../sass/_global/_uber.sass */
+/* line 28, ../sass/_global/_uber.sass */
+.uber .simple {
+  margin-left: 190px;
+}
+/* line 31, ../sass/_global/_uber.sass */
 .uber .info {
   width: 220px;
 }
-/* line 31, ../sass/_global/_uber.sass */
+/* line 33, ../sass/_global/_uber.sass */
 .uber h3 {
   color: white;
   font-size: 24px;
 }
 
-/* line 37, ../sass/_global/_uber.sass */
+/* line 39, ../sass/_global/_uber.sass */
 .uber.location .state-navigation {
   width: 60px;
   margin-left: 40px;
 }
-/* line 40, ../sass/_global/_uber.sass */
+/* line 42, ../sass/_global/_uber.sass */
 .uber.location .state-navigation li {
   text-align: center;
   line-height: 29px;
 }
-/* line 43, ../sass/_global/_uber.sass */
+/* line 45, ../sass/_global/_uber.sass */
 .uber.location .state-navigation .active {
   color: #009ddc;
   background: #043c57;
 }
-/* line 46, ../sass/_global/_uber.sass */
+/* line 48, ../sass/_global/_uber.sass */
 .uber.location .current-state {
   width: 580px;
   background: #043c57 url("images/location-nsw.jpg") no-repeat 433px 15px;
   min-height: 195px;
   padding: 20px;
 }
-/* line 51, ../sass/_global/_uber.sass */
+/* line 53, ../sass/_global/_uber.sass */
 .uber.location .current-state dt {
   font-size: 1.07692em;
   line-height: 1.14286em;
@@ -365,7 +377,7 @@ h1 {
   color: #009ddc;
   border-bottom: #009ddc 1px dotted;
 }
-/* line 59, ../sass/_global/_uber.sass */
+/* line 61, ../sass/_global/_uber.sass */
 .uber.location .current-state dl {
   display: inline;
   float: left;
@@ -373,7 +385,7 @@ h1 {
   margin-left: 0;
   margin-right: 20px;
 }
-/* line 64, ../sass/_global/_uber.sass */
+/* line 66, ../sass/_global/_uber.sass */
 .uber.location .current-state dl a {
   color: white;
 }
