--- a/sass/_global/_uber.sass
+++ b/sass/_global/_uber.sass
@@ -24,8 +24,10 @@
   +container
   +padding-leader
   +padding-trailer
-  text-align: center
   color: $text-color-white
+  .simple
+    // Offset width of the logo.
+    margin-left: 190px
   .info
     +columns(4)
   h3
